--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇯🇵 日本-2.14MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-244.4KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-2.84MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-2.71MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.83MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-649.1KB/s(Youtube:不良林), server: 43.155.101.188, port: 2292, type: vmess, uuid: 7731d35e-ddf5-47cb-f841-fa7d6e714735, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-334.5KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-486.3KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇯🇵 日本-5.05MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.88MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-495.2KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-18.13MB/s(Youtube:不良林), server: 120.233.186.250, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-15.11MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-244.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-649.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-495.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.11MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-244.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-649.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-495.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.11MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-244.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-649.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-495.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.11MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-244.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-649.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-495.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.11MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-244.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-649.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-495.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.11MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-244.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-649.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-495.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.11MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-244.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-649.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-495.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.11MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
