--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-943.2KB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-1.24MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇫🇷 法国-1.32MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-355.4KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇭🇰 香港-2.30MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇺🇸 美国-212.3KB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32911, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-533.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-687.8KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-253.8KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ru.2046.gq, skip-cert-verify: true}
   - {name: 🇺🇸 美国-302.2KB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
+  - {name: 🇬🇧 英国-233.5KB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-584.6KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-533.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-687.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-533.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-687.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-533.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-687.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-533.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-687.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-533.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-687.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-533.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-687.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-533.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-687.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
