--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-355.4KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇭🇰 香港-2.30MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇯🇵 日本-687.8KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-253.8KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ru.2046.gq, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇯🇵 日本-1.14MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-943.2KB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-1.46MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-17.83MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-302.2KB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
   - {name: 🇬🇧 英国-233.5KB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-584.6KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-355.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-687.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-355.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-687.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-355.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-687.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
@@ -66,20 +66,19 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.30MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-355.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-687.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
@@ -88,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-355.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-687.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
@@ -104,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-355.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-687.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
@@ -129,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-355.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-687.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-572.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
